# seminars-on-c

./: .gitignore
code-check/: .clang-tidy  README.md  run-check.py
seminar-1/: hello-world-preproc.c  hello-world.c  preproc.c  simple-sum.c
seminar-10/: CMakeLists.txt
seminar-10/binary-files/: CMakeLists.txt
seminar-10/binary-files/runtime-code/: CMakeLists.txt  main.c
seminar-10/test-2-solutuions/: CMakeLists.txt
seminar-11/: CMakeLists.txt  list.c  list.h  list_algorithms.c  list_algorithms.h  main.c
seminar-12/: CMakeLists.txt  bintree.c  bintree.h  main.c
seminar-13/: CMakeLists.txt
seminar-13/AVL/: CMakeLists.txt  avl.c  avl.h  main.c
seminar-2/: division-example.c  fp-example.c  fp-example.py  preproc.c  ub-example.c
seminar-3/: CMakeLists.txt  reamde.md
seminar-3/arrays/: CMakeLists.txt  array-io.c  array-io.h
seminar-3/gcd/: CMakeLists.txt  gcd-loops.c  gcd-main.c  gcd-naive.c  gcd-pointers.c
seminar-3/out-params/: CMakeLists.txt  divmod.c
seminar-4/: CMakeLists.txt
seminar-4/functions/: CMakeLists.txt  main.c  variadic-sum.c
seminar-4/recursion/: CMakeLists.txt
seminar-5/: CMakeLists.txt
seminar-6/: CMakeLists.txt
seminar-6/knuth-morris-pratt/: CMakeLists.txt  kmp-strstr.c  main.c  naive-strstr.c
seminar-7/: CMakeLists.txt
seminar-7/test-1-solutions/task1/: A-luck.c  CMakeLists.txt
seminar-7/test-1-solutions/task2/: A-Member-Non-Lexicographic.c  A-Member.c  CMakeLists.txt
seminar-7/test-1-solutions/task3/: A-HoneySE.c  CMakeLists.txt
seminar-8/: CMakeLists.txt
seminar-9/: .clang-format  CMakeLists.txt  test.c
(+47 files in other folders)
